fixed some css on mobile order cart

--- a/app/cart/cart-sidebar/cart-sidebar.component.css
+++ b/app/cart/cart-sidebar/cart-sidebar.component.css
@@ -155,4 +155,7 @@
     .cart-sidebar-item-img{
         width: 40px;
     }
+    #order-cart-item-holder{
+        margin-top: 10px;
+    }
 }
